Final visualization explanations.

--- a/nbs/Replicator network.ipynb
+++ b/nbs/Replicator network.ipynb
@@ -571,6 +571,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's visualize some of the images that have the highest reconstruction loss. \n",
+    "\n",
+    "What we hope is that the autoencoder has failed to reconstruct these images because their structure did not correspond to most of the other in the dataset. Another way to phrase it is that we hope that highly unusual pictures (anomalies) will have a high reconstruction loss."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
@@ -619,6 +628,13 @@
    ],
    "source": [
     "create_visualization(X, 25, reconstruction_loss_sort_idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we hoped, the images that the network had trouble to reconstruct are mostly fashion MNIST images and classical MNIST digits written in a highly unusual way. The most interesting fact about this approach is that at no point during this notebook, we have explained to the network what normal and abnormal data should be, it automatically detected outliers among our images."
    ]
   }
  ],
